--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!-- Title icon -->
-    <link rel="icon" type="image/png" sizes="56x56" href="#" />
+    <link rel="icon" type="image/png" sizes="56x56" href="images/main/main_dog.png" />
 
     <title>Benji</title>
   </head>
