--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     />
 
     <!-- Title icon -->
-    <link rel="icon" type="image/png" sizes="56x56" href="images/main/main_dog.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="56x56"
+      href="images/main/main_dog.png"
+    />
 
     <title>Benji</title>
   </head>
@@ -438,7 +443,9 @@
               Owning a <span>Benji</span> guarantees minting for our
               <span>Gen 2 Drop</span>:
             </p>
-            <img src="images/utility/pink_dog.png" alt="pink_dog" />
+            <div class="pink_dog">
+              <img src="images/utility/pink_dog.png" alt="pink_dog" />
+            </div>
           </div>
         </div>
       </div>
@@ -452,7 +459,7 @@
           <div class="gen2_top">
             <div class="gen2_top_text">
               <p>
-                wning a <span class="light_clr">Benji Baby</span> gives
+                Owning a <span class="light_clr">Benji Baby</span> gives
                 exclusive access to the
                 <span>Benji Babies new animated series</span
                 ><span class="comma">,</span> and to
