--- a/index.html
+++ b/index.html
@@ -265,6 +265,9 @@
         <div class="team_content">
           <div class="team_top">
             <h2>BENJI'S FRENS</h2>
+            <div class="butter_red">
+              <img src="images/main/butterred.gif" alt="" />
+            </div>
           </div>
           <div class="team_members">
             <div class="member_1 member">
@@ -423,6 +426,10 @@
                   <img src="images/utility/puppy_thumb.png" alt="" />
                 </div>
                 <p>Exclusive Benji 3.0 <span>Merch.</span></p>
+
+                <div class="logo_dog">
+                  <img src="images/utility/logo_dog.png" alt="logo_dog">
+                </div>
               </div>
               <div class="text text_fourth">
                 <div class="thum_img">
