--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="56x56"
+      sizes="50x76"
       href="images/main/main_dog.png"
     />
 
@@ -39,16 +39,16 @@
           </div>
           <nav class="nav_right">
             <i class="fa-solid fa-bars hamburger"></i>
-            <ul class="">
+            <ul class="navigation">
               <i class="fa-solid fa-close hamburger"></i>
 
-              <li><a href="#home" class="bold">Home</a></li>
-              <li><a href="#nft">Nft</a></li>
-              <li><a href="#history">History</a></li>
-              <li><a href="#team">Team</a></li>
-              <li><a href="#utility">Utility</a></li>
-              <li><a href="#gen2">Gen2</a></li>
-              <li><a href="#woof">Woof!</a></li>
+              <li><a href="#1">Home</a></li>
+              <li><a href="#2">Nft</a></li>
+              <li><a href="#3">History</a></li>
+              <li><a href="#4">Team</a></li>
+              <li><a href="#5">Utility</a></li>
+              <li><a href="#6">Gen2</a></li>
+              <li><a href="#7">Woof!</a></li>
 
               <div class="social_icons extra_sm">
                 <div class="twitter">
@@ -70,7 +70,7 @@
     <!--==================================================-->
     <!-----Start Main Section ----->
     <!--===================================================-->
-    <section class="main" id="home">
+    <section class="main" id="1">
       <div class="container">
         <div class="main_top">
           <div class="social_icons">
@@ -110,7 +110,7 @@
       </div>
       <div class="grass">
         <div class="grass_lg">
-          <img src="images/grass1.png" alt="" />
+          <img src="images/main/grass_lg.png" alt="" />
         </div>
         <div class="grass_sm">
           <img src="images/main/grass_mbl.png" alt="" />
@@ -120,7 +120,7 @@
     <!--==================================================-->
     <!-----Start NFT Section ----->
     <!--===================================================-->
-    <section class="nft" id="nft">
+    <section class="nft" id="2">
       <div class="loves">
         <div class="red_love_sm sm">
           <img src="images/nft/red_Love.jpg" alt="" />
@@ -208,7 +208,7 @@
     <!--==================================================-->
     <!-----Start History Section ----->
     <!--===================================================-->
-    <section class="history" id="history">
+    <section class="history" id="3">
       <div class="container">
         <div class="history_content">
           <div class="history_left">
@@ -260,7 +260,7 @@
     <!--==================================================-->
     <!-----Start Team Section ----->
     <!--===================================================-->
-    <section class="team" id="team">
+    <section class="team" id="4">
       <div class="container">
         <div class="team_content">
           <div class="team_top">
@@ -377,7 +377,7 @@
     <!--==================================================-->
     <!-----Start Utility Section ----->
     <!--===================================================-->
-    <section class="utility" id="utility">
+    <section class="utility" id="5">
       <div class="container">
         <div class="utility_content">
           <div class="sorrow_dog">
@@ -460,7 +460,7 @@
     <!--==================================================-->
     <!-----Start Gen2 Section ----->
     <!--===================================================-->
-    <section class="gen2" id="gen2">
+    <section class="gen2" id="6">
       <div class="container">
         <div class="gen2_content">
           <div class="gen2_top">
@@ -557,7 +557,7 @@
       </div>
     </section>
 
-    <footer class="woof" id="woof">
+    <section class="woof" id="7">
       <div class="container">
         <div class="woof_content">
           <div class="woof_left">
@@ -578,7 +578,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </section>
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/uikit.min.js"></script>
