--- a/index.html
+++ b/index.html
@@ -39,30 +39,32 @@
           </div>
           <nav class="nav_right">
             <i class="fa-solid fa-bars hamburger"></i>
-            <ul class="navigation">
-              <i class="fa-solid fa-close hamburger"></i>
+            <div class="nav_links">
+              <ul class="navigation">
+                <i class="fa-solid fa-close hamburger"></i>
 
-              <li><a href="#1">Home</a></li>
-              <li><a href="#2">Nft</a></li>
-              <li><a href="#3">History</a></li>
-              <li><a href="#4">Team</a></li>
-              <li><a href="#5">Utility</a></li>
-              <li><a href="#6">Gen2</a></li>
-              <li><a href="#7">Woof!</a></li>
+                <li><a href="#1">Home</a></li>
+                <li><a href="#2">Nft</a></li>
+                <li><a href="#3">History</a></li>
+                <li><a href="#4">Team</a></li>
+                <li><a href="#5">Utility</a></li>
+                <li><a href="#6">Gen2</a></li>
+                <li><a href="#7">Woof!</a></li>
 
-              <div class="social_icons extra_sm">
-                <div class="twitter">
-                  <a href="#"
-                    ><img src="images/main/twitter.png" alt="twitter"
-                  /></a>
+                <div class="social_icons extra_sm">
+                  <div class="twitter">
+                    <a href="#"
+                      ><img src="images/main/twitter.png" alt="twitter"
+                    /></a>
+                  </div>
+                  <div class="discord">
+                    <a href="#"
+                      ><img src="images/main/discord.png" alt="discord"
+                    /></a>
+                  </div>
                 </div>
-                <div class="discord">
-                  <a href="#"
-                    ><img src="images/main/discord.png" alt="discord"
-                  /></a>
-                </div>
-              </div>
-            </ul>
+              </ul>
+            </div>
           </nav>
         </div>
       </div>
@@ -153,7 +155,7 @@
                   <p>
                     Benji and his team of frens are on a mission to bring
                     tail-wagging vibes and <span>unprecedented utility</span> to
-                    the Web 3.0 space.
+                    the<br />Web 3.0 space.
                   </p>
                   <p>All mutts allowed.</p>
                 </div>
@@ -301,7 +303,6 @@
                   <p>Retired Circus Acrobat, Acclaimed Experiential Artist.</p>
                   <p>And, he's a Ninja, for real.</p>
                 </div>
-                <div class="social_link"><a href="#">@twitter</a></div>
               </div>
             </div>
 
@@ -314,12 +315,12 @@
 
                 <div class="member_info">
                   <p>
-                    Writer, Director, Producer of Films & TV, including the most
-                    recent BENJI, now on Netflix.
+                    Journalist turned Entrepreneur/Investor in Virtual & Real
+                    Estate.
                   </p>
-                  <p>And yes, he's that kid's kid.</p>
+                  <p>Still plays Zork.</p>
                 </div>
-                <div class="social_link"><a href="#">@twitter</a></div>
+                <div class="social_link"><a href="#">@bjosborne</a></div>
               </div>
             </div>
 
@@ -334,7 +335,7 @@
                   <p>Former Tech & Travel CEO, Entrepreneur, Crypto Miner.</p>
                   <p>Raised on the Atari 2600.</p>
                 </div>
-                <div class="social_link"><a href="#">@twitter</a></div>
+                <div class="social_link"><a href="#">@purveyorinc</a></div>
               </div>
             </div>
 
@@ -343,16 +344,15 @@
                 <img src="images/team/frame_dog_5.png" alt="" />
               </div>
               <div class="member_text">
-                <h4>TROYE MILLER, META-MAGI</h4>
+                <h4>TROYE LINCOLN,<br />CHIEF PROBLEM SOLVER</h4>
 
                 <div class="member_info">
                   <p>
-                    Writer, Director, Producer of Films & TV, including the most
-                    recent BENJI, now on Netflix.
+                    Web 3 Evangelist & Consultant, Idea Fountain. Is probably
+                    walking his dog right now.
                   </p>
-                  <p>And yes, he's that kid's kid.</p>
                 </div>
-                <div class="social_link"><a href="#">@twitter</a></div>
+                <div class="social_link"><a href="#">@beermagician</a></div>
               </div>
             </div>
             <div class="member_6 member">
@@ -366,7 +366,7 @@
                   <p>Serial Entrepreneur, VR Enthusiast, Web 3.0 Specialist.</p>
                   <p>Sucker for all things four-legged</p>
                 </div>
-                <div class="social_link"><a href="#">@twitter</a></div>
+                <div class="social_link"><a href="#">@4dable</a></div>
               </div>
             </div>
           </div>
@@ -380,11 +380,8 @@
     <section class="utility" id="5">
       <div class="container">
         <div class="utility_content">
-          <div class="sorrow_dog">
-            <img src="images/utility/sorrow_dog.png" alt="sorrow_dog.png" />
-          </div>
           <div class="utility_top">
-            <h2>Utility Innovation</h2>
+            <h2>UTILITY INNOVATION</h2>
             <div class="lock_pin">
               <img src="images/utility/benji_pin.png" alt="benji_pin.png" />
             </div>
@@ -393,9 +390,7 @@
             <p>
               Owning a Benji grants exclusive access to
               <span>unprecedented perks</span> in
-              <span>Benji's Hollywood Doghouse</span>. <br />
-              You can read more in our Discord, but here are a few of the
-              pawesome benefits:
+              <span>Benji's Hollywood Doghouse</span>.
             </p>
             <div class="thum_text">
               <div class="text text_first">
@@ -408,6 +403,12 @@
                 </p>
               </div>
               <div class="text text_second">
+                <div class="sorrow_dog">
+                  <img
+                    src="images/utility/sorrow_dog.png"
+                    alt="sorrow_dog.png"
+                  />
+                </div>
                 <div class="logo_dog">
                   <img src="images/utility/logo_dog.png" alt="logo_dog" />
                 </div>
@@ -420,16 +421,6 @@
                   exclusive <br />
                   <span>Brand Partners.</span>
                 </p>
-              </div>
-              <div class="text text_third">
-                <div class="thum_img">
-                  <img src="images/utility/puppy_thumb.png" alt="" />
-                </div>
-                <p>Exclusive Benji 3.0 <span>Merch.</span></p>
-
-                <div class="logo_dog">
-                  <img src="images/utility/logo_dog.png" alt="logo_dog">
-                </div>
               </div>
               <div class="text text_fourth">
                 <div class="thum_img">
@@ -466,15 +457,12 @@
           <div class="gen2_top">
             <div class="gen2_top_text">
               <p>
-                Owning a <span class="light_clr">Benji Baby</span> gives
+                Holding a <span class="light_clr">Benji Baby</span> gives
                 exclusive access to the
                 <span>Benji Babies new animated series</span
                 ><span class="comma">,</span> and to
                 <span>Benji's next film production</span>:
               </p>
-              <div class="scretch_img">
-                <img src="images/gen2/scretch.png" alt="scretch" />
-              </div>
             </div>
 
             <div class="clapboard">
