--- a/index.html
+++ b/index.html
@@ -472,11 +472,28 @@
 
           <div class="gen2_bottom">
             <div class="con_with_banner">
-              <div class="dog_banner_first dog_banner">
-                <img src="images/gen2/left_top_dog.png" alt="left_top_dog" />
-              </div>
-              <div class="dog_banner_third dog_banner">
-                <img src="images/gen2/right_top_dog.png" alt="right_top_dog" />
+              <div class="banners">
+                <div class="dog_banner_first dog_banner">
+                  <img src="images/gen2/left_top_dog.png" alt="left_top_dog" />
+                </div>
+                <div class="dog_banner_third dog_banner">
+                  <img
+                    src="images/gen2/right_top_dog.png"
+                    alt="right_top_dog"
+                  />
+                </div>
+                <div class="dog_banner_second dog_banner">
+                  <img
+                    src="images/gen2/left_bottom_dog.png"
+                    alt="left_bottom_dog"
+                  />
+                </div>
+                <div class="dog_banner_fourth dog_banner">
+                  <img
+                    src="images/gen2/right_bottom_dog.png"
+                    alt="right_bottom_dog"
+                  />
+                </div>
               </div>
               <p>
                 <span class="light_clr">The pups</span> grant behind-the-scenes
@@ -490,56 +507,39 @@
                 <span class="red_clr"
                   >Holders will interact in real-time!
                 </span>
-                Next level perks and Rewards include
                 <span class="red_clr">on-set-visits</span>
                 <span class="comma">,</span>
                 <span class="red_clr">premiere tickets</span>
-                <span class="comma">,</span> even
+                <span class="comma">,</span>
                 <span class="red_clr">casting opportunities</span>…
               </p>
-            </div>
 
-            <p>
-              <span class="red_clr">Exclusive AMA's</span> featuring the cast
-              and crew<span class="comma">.</span> (See how a grip truck is
-              organized<span class="comma">.</span>
-              watch a composer work with an orchestra…)
-            </p>
-            <div class="con_with_banner">
-              <div class="dog_banner_second dog_banner">
-                <img
-                  src="images/gen2/left_bottom_dog.png"
-                  alt="left_bottom_dog"
-                />
-              </div>
-              <div class="dog_banner_fourth dog_banner">
-                <img
-                  src="images/gen2/right_bottom_dog.png"
-                  alt="right_bottom_dog"
-                />
-              </div>
-
+              <p>
+                <span class="red_clr">Exclusive AMA's</span> featuring the cast
+                and crew<span class="comma">.</span>
+              </p>
               <p>
                 Holders receive a "<span class="red_clr">Special Thanks</span>"
                 credit in the End Credits of the film<span class="comma"
                   >.</span
                 >
               </p>
+
+              <p>
+                <span class="red_clr">Raffles</span> and
+                <span class="red_clr">Rarity Rewards</span> offer character
+                naming privileges<span class="comma">,</span> extras casting
+                opportunities<span class="comma">,</span
+                ><span class="red_clr">VIP Hollywood tours</span
+                ><span class="comma">,</span> etc<span class="comma">.</span>
+              </p>
+              <p>
+                Whales<span class="comma">.</span> or Benji's
+                <span class="red_clr">Top Dogs</span
+                ><span class="comma">.</span> can earn Main Titles credit and
+                more<span class="comma">.</span>
+              </p>
             </div>
-            <p>
-              <span class="red_clr">Raffles</span> and
-              <span class="red_clr">Rarity Rewards</span> offer character naming
-              privileges<span class="comma">,</span> extras casting
-              opportunities<span class="comma">,</span
-              ><span class="red_clr">VIP Hollywood tours</span
-              ><span class="comma">,</span> etc<span class="comma">.</span>
-            </p>
-            <p>
-              Whales<span class="comma">.</span> or Benji's
-              <span class="red_clr">Top Dogs</span
-              ><span class="comma">.</span> can earn Main Titles credit and
-              more<span class="comma">.</span>
-            </p>
           </div>
         </div>
       </div>
