--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@
               </div>
               <div class="member_text">
                 <h4>TROYE LINCOLN,<br />CHIEF PROBLEM SOLVER</h4>
-
-                <div class="member_info">
+                <div class="member_info_without_margin">
                   <p>
                     Web 3 Evangelist & Consultant, Idea Fountain. Is probably
                     walking his dog right now.
