--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <div class="member_img">
                 <img src="images/team/frame_dog_5.png" alt="" />
               </div>
-              <div class="member_text">
+              <!-- <div class="member_text">
                 <h4>TROYE LINCOLN,<br />CHIEF PROBLEM SOLVER</h4>
                 <div class="member_info_without_margin">
                   <p>
@@ -352,6 +352,18 @@
                   </p>
                 </div>
                 <div class="social_link"><a href="#">@beermagician</a></div>
+              </div> -->
+              <div class="member_text">
+                <h4>TROYE LINCOLN,<br />CHIEF PROBLEM SOLVER</h4>
+
+                <div class="member_info">
+                  <p>
+                    Writer, Director, Producer of Films &amp TV, including the
+                    most recent BENJI, now on Netflix.
+                  </p>
+                  <p></p>
+                </div>
+                <div class="social_link"><a href="#">@twitter</a></div>
               </div>
             </div>
             <div class="member_6 member">
