--- a/index.html
+++ b/index.html
@@ -458,8 +458,7 @@
               <p>
                 Holding a <span class="light_clr">Benji Baby</span> gives
                 exclusive access to the
-                <span>Benji Babies new animated series</span
-                ><span class="comma">,</span> and to
+                <span>Benji Babies new animated series,</span> and to
                 <span>Benji's next film production</span>:
               </p>
             </div>
@@ -496,47 +495,35 @@
               </div>
               <p>
                 <span class="light_clr">The pups</span> grant behind-the-scenes
-                access to production as the new Benji film is cast<span
-                  class="comma"
-                  >,</span
-                >shot<span class="comma">,</span> edited<span class="comma"
-                  >,</span
-                >
-                and scored<span class="comma">.</span>
+                access to production as the new Benji film is cast, shot,
+                edited, and scored.
                 <span class="red_clr"
                   >Holders will interact in real-time!
                 </span>
-                <span class="red_clr">on-set-visits</span>
-                <span class="comma">,</span>
-                <span class="red_clr">premiere tickets</span>
-                <span class="comma">,</span>
+                <span class="red_clr">On-set-visits</span>,
+                <span class="red_clr">premiere tickets</span>,
                 <span class="red_clr">casting opportunities</span>…
               </p>
 
               <p>
                 <span class="red_clr">Exclusive AMA's</span> featuring the cast
-                and crew<span class="comma">.</span>
+                and crew.
               </p>
               <p>
                 Holders receive a "<span class="red_clr">Special Thanks</span>"
-                credit in the End Credits of the film<span class="comma"
-                  >.</span
-                >
+                credit in the End Credits of the film.
               </p>
 
               <p>
                 <span class="red_clr">Raffles</span> and
                 <span class="red_clr">Rarity Rewards</span> offer character
-                naming privileges<span class="comma">,</span> extras casting
-                opportunities<span class="comma">,</span
-                ><span class="red_clr">VIP Hollywood tours</span
-                ><span class="comma">,</span> etc<span class="comma">.</span>
+                naming privileges, extras casting opportunities,
+                <span class="red_clr">VIP Hollywood tours</span>, etc.
               </p>
               <p>
-                Whales<span class="comma">.</span> or Benji's
-                <span class="red_clr">Top Dogs</span
-                ><span class="comma">.</span> can earn Main Titles credit and
-                more<span class="comma">.</span>
+                Whales, or Benji's
+                <span class="red_clr">Top Dogs</span>, can earn Main Titles
+                credit and more.
               </p>
             </div>
           </div>
