--- a/index.html
+++ b/index.html
@@ -346,10 +346,8 @@
               <div class="member_text">
                 <h4>TROYE LINCOLN,<br />CHIEF PROBLEM SOLVER</h4>
                 <div class="member_info without_margin">
-                  <p>
-                    Web 3 Evangelist & Consultant, Idea Fountain. Is probably
-                    walking his dog right now.
-                  </p>
+                  <p>Web 3 Evangelist & Consultant, Idea Fountain.</p>
+                  <p>Walking his dog right now.</p>
                 </div>
                 <div class="social_link"><a href="#">@beermagician</a></div>
               </div>
