--- a/index.html
+++ b/index.html
@@ -551,6 +551,9 @@
         </div>
       </div>
     </section>
+
+    <div class="overly">
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/uikit.min.js"></script>
